Improve jumpy performance + fix blurry canvas

--- a/games/jumpy/jumpy.css
+++ b/games/jumpy/jumpy.css
@@ -1,17 +1,25 @@
-#canv {
-    width: 100%;
-    height: 100%;
+#top-screen {
+	position: relative;
 }
-
-#gameover {
-    color: red;
-    position: absolute;
-    left: 100px;
-    top: 70px;
-    -webkit-text-stroke-width: 2px;
-    -webkit-text-stroke-color: black;
-}
-
 #bottom-screen {
-    text-align: center;
+	text-align: center;
+}
+#gameover {
+	color: red;
+	position: absolute;
+	left: 100px;
+	top: 70px;
+	-webkit-text-stroke-width: 2px;
+	-webkit-text-stroke-color: black;
+}
+#player {
+	height: 52px;
+	position: absolute;
+	width: 36px;
+}
+.spike {
+	height: 51px;
+	position: absolute;
+	top: 167px;
+	width: 27px;
 }
